--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ body {
 .tasks {
     width: 500px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: #fff;
@@ -47,6 +48,17 @@ body {
     font-weight: 600;
     color: #6a11cb;
     margin-bottom: 20px;
+}
+.quiz-counter{
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+.quiz{
+    display: flex;
+}
+p {
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .variants {
@@ -76,6 +88,25 @@ body {
 .variants li:hover {
     background: #6a11cb;
 }
+.btns-box{
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+}
+.next-prev-btn {
+    border: none;
+    background: transparent;
+    transition: all 0.2s ease-in-out;
+    scale: 1; 
+    cursor: pointer;
+}
+.next-prev-btn:hover {
+    opacity: 0.7;
+}
+.next-prev-btn:active {
+    scale: 0.7; 
+}
+
 
 .red{
     background: rgb(255, 76, 76) !important;
